publish to Central; use uncheck-all instead of Project Lombok